# cpp-2019

HomeWork1/: CMakeLists.txt  addition.h  main.cpp  test.txt
HomeWork10/: Array.cpp  Array.hpp  CMakeLists.txt  functions.cpp  functions.hpp  main.cpp  tests.cpp  tests.hpp
HomeWork2/: Makefile  bye.cpp  hello.cpp  here.cpp  main.cpp  mylib.h
HomeWork4/hw4_B/: CMakeLists.txt  main.cpp
HomeWork4/hw4_C/: CMakeLists.txt  main.cpp
HomeWork4/hw4_D/: CMakeLists.txt  main.cpp
HomeWork4/hw4_E/: CMakeLists.txt  main.cpp
HomeWork4/hw4_F/: CMakeLists.txt  main.cpp
HomeWork4/hw4_G/: CMakeLists.txt  main.cpp
HomeWork4/hw4_H/: CMakeLists.txt  main.cpp
HomeWork4/hw4_I/: CMakeLists.txt  main.cpp
HomeWork5_task1/: CMakeLists.txt  main.cpp
HomeWork5_task2/: CMakeLists.txt  main.cpp
HomeWork5_task3/: CMakeLists.txt  Makefile  main.cpp
HomeWork6/: CMakeLists.txt  main.cpp
HomeWork7/HW7_task1/: CMakeLists.txt  Driver.cpp  Driver.h  PlaneFigure.h  Rect.cpp  Rect.h  main.cpp
HomeWork7/HW7_task2/: CMakeLists.txt  main.cpp
HomeWork7/HW7_task3/: CMakeLists.txt  Date.cpp  Date.h  (+5 more)
HomeWork8/: Budget.cpp  Budget.h  CEO.cpp  CEO.h  CMakeLists.txt  Cause.cpp  Cause.h  Department.cpp  Department.h  Director.cpp  Director.h  Employee.cpp  Employee.h  Event.cpp  Event.h  FundRaisingDepartment.cpp  FundRaisingDepartment.h  FundsBalance.cpp  FundsBalance.h  GrantDepartment.cpp  GrantDepartment.h  Message.cpp  Message.h  Office.cpp  Office.h  Secretary.cpp  Secretary.h  Trust.cpp  Trust.h  main.cpp
HomeWork9/: CMakeLists.txt  Hydrocarbon.cpp  Hydrocarbon.h  main.cpp
